--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "http://venkateshgopalakrishnan.github.io/portfolio-app",
+  "homepage": "http://venkateshgopalakrishnan.github.io",
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
